--- a/Multilinear_Regression_Project.ipynb
+++ b/Multilinear_Regression_Project.ipynb
@@ -968,7 +968,7 @@
       },
       "source": [
         "Now I will build our Model (**y = b0 + b1x1 + b2x2 + …….. + bnxn**)\n",
-        "#by drawing the line of best fit."
+        "## by drawing the line of best fit."
       ]
     },
     {
