--- a/Multilinear_Regression_Project.ipynb
+++ b/Multilinear_Regression_Project.ipynb
@@ -50,8 +50,7 @@
         "id": "AYvcd86fHO0m"
       },
       "source": [
-        "50 Startups dataset.\n",
-        "This dataset has data collected from New York, California and Florida about 50 business Startups “17 in each\n",
+        "This dataset(50 Startups dataset)has data collected from New York, California and Florida about 50 business Startups “17 in each\n",
         "state”. The variables used in the dataset are Profit, R&D spending, Administration Spending, and Marketing\n",
         "Spending."
       ]
