--- a/Multilinear_Regression_Project.ipynb
+++ b/Multilinear_Regression_Project.ipynb
@@ -32,7 +32,7 @@
         "id": "83AbGGF0HO0Z"
       },
       "source": [
-        "MUIRU EUGENE GITONGA"
+        "EUGENE GITONGA"
       ]
     },
     {
