--- a/Multilinear_Regression_Project.ipynb
+++ b/Multilinear_Regression_Project.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.3"
     },
     "colab": {
-      "name": "Group_1_Multilinear_Regression.ipynb",
+      "name": "Multilinear_Regression.ipynb",
       "provenance": [],
       "collapsed_sections": []
     }
@@ -61,7 +61,7 @@
         "id": "o1Nl5n3OHO0n"
       },
       "source": [
-        "**In this Project I have used Multiple Linear Regression Model since the target variable (Profit) depends on more than one independent variables(X).**"
+        "**In this project I have used multiple linear regression model since the target variable (Profit) depends on more than one independent variables(X).**"
       ]
     },
     {
